[gd_scene load_steps=8 format=3 uid="uid://ba1pm8uaio5n3"]

[ext_resource type="PackedScene" uid="uid://dvufyrat5i2kt" path="res://fundamental elements/scene_element_camera.tscn" id="1_5esrh"]
[ext_resource type="Script" uid="uid://iqlejaboi4bm" path="res://menus/level_title/script_level_title.gd" id="1_lpnam"]
[ext_resource type="FontFile" uid="uid://cx680grmaoqdt" path="res://resources/fonts/chuckyader_font.png" id="3_k6cdp"]
[ext_resource type="Texture2D" uid="uid://ddgkavenqgmex" path="res://menus/level_title/sprites/level_title_vignette.png" id="4_kelem"]

[sub_resource type="Animation" id="Animation_kelem"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("label_level_title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("subvpcont_vignette/subvp_vignette/canlay_vignette/spr2D_vignette:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("subvpcont_vignette/subvp_vignette/canlay_vignette/spr2D_vignette2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.1415927]
}

[sub_resource type="Animation" id="Animation_k6cdp"]
resource_name = "wiggle"
length = 1.3333367
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("label_level_title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.5, 0.8333333, 1.1666667, 1.3333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(64, 64), Vector2(64, 62), Vector2(64, 66), Vector2(64, 62), Vector2(64, 66), Vector2(64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("subvpcont_vignette/subvp_vignette/canlay_vignette/spr2D_vignette:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.141592653589793]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("subvpcont_vignette/subvp_vignette/canlay_vignette/spr2D_vignette2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.3333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.1415927, 1.5707963267948966]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6up6j"]
_data = {
&"RESET": SubResource("Animation_kelem"),
&"wiggle": SubResource("Animation_k6cdp")
}

[node name="SceneLevelTitle" type="Node2D"]
script = ExtResource("1_lpnam")

[node name="node_camera" parent="." node_paths=PackedStringArray("background_element") instance=ExtResource("1_5esrh")]
background_color = 4
background_element = NodePath("node_background_blank")

[node name="node_background_blank" type="Node2D" parent="node_camera"]

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="label_level_title" type="Label" parent="control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -26.0
offset_right = 96.00021
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_k6cdp")
text = "LEVEL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="label_level_number" type="Label" parent="control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.99989
offset_top = -83.0
offset_right = 96.000305
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.078431375)
theme_override_fonts/font = ExtResource("3_k6cdp")
theme_override_font_sizes/font_size = 160
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="aniplayr_label" type="AnimationPlayer" parent="control"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_6up6j")
}
autoplay = "wiggle"
speed_scale = 0.2

[node name="subvpcont_vignette" type="SubViewportContainer" parent="control"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="subvp_vignette" type="SubViewport" parent="control/subvpcont_vignette"]
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(320, 180)

[node name="canlay_vignette" type="CanvasLayer" parent="control/subvpcont_vignette/subvp_vignette"]

[node name="spr2D_vignette" type="Sprite2D" parent="control/subvpcont_vignette/subvp_vignette/canlay_vignette"]
position = Vector2(160, 97)
texture = ExtResource("4_kelem")

[node name="spr2D_vignette2" type="Sprite2D" parent="control/subvpcont_vignette/subvp_vignette/canlay_vignette"]
position = Vector2(160, 97)
rotation = 3.1415927
texture = ExtResource("4_kelem")

[node name="timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="timer" to="." method="_onTimeout"]
